// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn renders as expected 1`] = `
Array [
  <View
    style={
      Object {
        "marginVertical": 12,
      }
    }
  >
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {},
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "lineHeight": 21,
                "paddingVertical": 12,
              },
              undefined,
            ],
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 16,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {},
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "lineHeight": 21,
                "paddingVertical": 12,
              },
              undefined,
            ],
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 16,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              Object {},
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 8%, 55%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderWidth": 0,
        },
        null,
        null,
        Object {
          "marginVertical": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Sign in
    </Text>
  </View>,
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          Object {
            "borderWidth": 0,
          },
          null,
          null,
          Object {
            "marginVertical": 8,
            "minWidth": "50%",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Forgot Password?
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          Object {
            "borderWidth": 0,
          },
          null,
          null,
          Object {
            "marginVertical": 8,
            "minWidth": "50%",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
]
`;

exports[`SignIn renders as expected when hideSignUp is true 1`] = `
Array [
  <View
    style={
      Object {
        "marginVertical": 12,
      }
    }
  >
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {},
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "lineHeight": 21,
                "paddingVertical": 12,
              },
              undefined,
            ],
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 16,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {},
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "lineHeight": 21,
                "paddingVertical": 12,
              },
              undefined,
            ],
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 16,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              Object {},
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 8%, 55%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderWidth": 0,
        },
        null,
        null,
        Object {
          "marginVertical": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Sign in
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 8%, 55%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {
          "borderWidth": 0,
        },
        null,
        null,
        Object {
          "marginVertical": 8,
          "minWidth": "50%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(190, 95%, 30%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Forgot Password?
    </Text>
  </View>,
]
`;

exports[`SignIn renders as expected with an error 1`] = `
Array [
  <View
    style={
      Object {
        "marginVertical": 12,
      }
    }
  >
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {},
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "lineHeight": 21,
                "paddingVertical": 12,
              },
              undefined,
            ],
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 16,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {},
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "lineHeight": 21,
                "paddingVertical": 12,
              },
              undefined,
            ],
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 16,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              Object {},
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(0, 75%, 85%)",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 32,
        },
        Object {
          "marginVertical": 12,
        },
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 8,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 100%, 20%)",
            "flex": 1,
            "paddingHorizontal": 8,
          },
          Object {},
        ]
      }
    >
      An error!
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 8%, 55%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderWidth": 0,
        },
        null,
        null,
        Object {
          "marginVertical": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Sign in
    </Text>
  </View>,
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          Object {
            "borderWidth": 0,
          },
          null,
          null,
          Object {
            "marginVertical": 8,
            "minWidth": "50%",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Forgot Password?
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "hsl(210, 8%, 55%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          Object {
            "borderWidth": 0,
          },
          null,
          null,
          Object {
            "marginVertical": 8,
            "minWidth": "50%",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
]
`;
